Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-316: Add test-patch.sh for precommit test using Jenkins.
  (hyunsik via ereisman)

  GIRAPH-319: Receiving two responses for a request causes an
  exception. (apresta via aching)

  GIRAPH-291: PredicateLock should have a constructor to take in a
  custom waiting time and additional testing (aching via ereisman)

  GIRAPH-318: New Iterator in LocalityInfoSorter is not working.
  (Eli Reisman via apresta)

  GIRAPH-317: Add subpackages to comm (Maja Kabiljo via ereisman)

  GIRAPH-301: InputSplit Reservations are clumping, leaving many workers
  asleep while other process too many splits and get overloaded.
  (Eli Reisman via apresta)

  GIRAPH-313: Open Netty client and server on master. (majakabiljo via
  aching)

  GIRAPH-249: Move part of the graph out-of-core when memory is low
  (apresta via aching).

  GIRAPH-306: Netty requests should be reliable and implement exactly
  once semantics. (aching)

  GIRAPH-309: Message count is wrong. (aching via apresta)

  GIRAPH-246: Periodic worker calls to context.progress() will prevent
  timeout on some Hadoop clusters during barrier waits. (Eli Reisman
  via aching)

  GIRAPH-295: Additional Example Algorithm to compute Outdegree and
  Indegree. (Sean Choi via aching)

  GIRAPH-305: Adding an argument to GiraphRunner for Master Compute
  classes. (Sean Choi via aching)

  GIRAPH-302: Thread safety issue with sending partitions around.
  (aching via apresta)

  GIRAPH-303: Regression: cleanup phase happens earlier than it
  should. (majakabiljo via apresta)

  GIRAPH-278: Website still tries to load incubator logo (ekoontz)

  GIRAPH-300) Improve netty reliability with retrying failed
  connections, tracking requests, thread-safe hash partitioning
  (aching via apresta).

  GIRAPH-296: TotalNumVertices and TotalNumEdges are not saved in
  checkpoint.  (majakabiljo via apresta)

  GIRAPH-297: Checkpointing on master is done one superstep later